<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">WoWHQ</string>
    <string name="menu_top_bilds">Top\nсборки\nталантов</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_wowtoken">WoWToken</string>
    <string name="menu_character_profiles">Просмотр персонажей</string>
    <string name="menu_talant_calc">Калькулятор талантов</string>
    <string name="menu_auc">Аукцион</string>
    <string name="menu_auc_tracking">Ваши предметы</string>
    <string name="menu_auc_best">Сделки</string>
    <string name="setting_title">Настройки</string>
    <string name="setting_server">Имя сервера</string>
    <string name="setting_lang">Язык</string>
    <string name="setting_region">Регион</string>
    <string name="talents_a_bar_title_text">Таланты</string>
    <string name="set_this_text_from_resource">Set this text from resource</string>
    <string name="talents_button_reset_text">Сбросить выбор</string>
    <string name="auctions_title">Аукционы</string>
    <string-array name="langs">
        <item>ru</item>
        <item>en</item>
        <item>de</item>
        <item>fr</item>
    </string-array>
    <string-array name="regions">
        <item>us</item>
        <item>eu</item>
    </string-array>
    <string-array name="auction_title">
        <item>Сделки</item>
        <item>Аукцион</item>
        <item>Настрока фильтра</item>
    </string-array>
    <string-array name="slugs_us">
        <item>earthen-ring</item>
        <item>icecrown</item>
        <item>hellscream</item>
        <item>hyjal</item>
        <item>frostwolf</item>
        <item>lightbringer</item>
        <item>blackrock</item>
        <item>doomhammer</item>
        <item>silver-hand</item>
        <item>tichondrius</item>
        <item>kelthuzad</item>
        <item>alleria</item>
        <item>eitrigg</item>
        <item>whisperwind</item>
        <item>garona</item>
        <item>illidan</item>
        <item>archimonde</item>
        <item>khadgar</item>
        <item>zuljin</item>
        <item>stormrage</item>
        <item>stormreaver</item>
        <item>medivh</item>
        <item>malganis</item>
        <item>shattered-hand</item>
        <item>arthas</item>
        <item>lothar</item>
        <item>elune</item>
        <item>dalaran</item>
        <item>spinebreaker</item>
        <item>crushridge</item>
        <item>feathermoon</item>
        <item>bloodscalp</item>
        <item>perenolde</item>
        <item>wildhammer</item>
        <item>baelgun</item>
        <item>steamwheedle-cartel</item>
        <item>norgannon</item>
        <item>fenris</item>
        <item>borean-tundra</item>
        <item>zangarmarsh</item>
        <item>draenor</item>
        <item>moon-guard</item>
        <item>destromath</item>
        <item>bonechewer</item>
        <item>dragonmaw</item>
        <item>shadowsong</item>
        <item>gilneas</item>
        <item>eonar</item>
        <item>kargath</item>
        <item>daggerspine</item>
        <item>aggramar</item>
        <item>dragonblight</item>
        <item>moonrunner</item>
        <item>greymane</item>
        <item>guldan</item>
        <item>agamaggan</item>
        <item>nazjatar</item>
        <item>korgath</item>
        <item>thorium-brotherhood</item>
        <item>ysondre</item>
        <item>altar-of-storms</item>
        <item>onyxia</item>
        <item>sentinels</item>
        <item>anvilmar</item>
        <item>arygos</item>
        <item>vashj</item>
        <item>nordrassil</item>
        <item>tortheldrin</item>
        <item>drenden</item>
        <item>blood-furnace</item>
        <item>shattered-halls</item>
        <item>ragnaros</item>
        <item>fizzcrank</item>
        <item>nemesis</item>
        <item>ghostlands</item>
        <item>thaurissan</item>
        <item>jubeithos</item>
        <item>nagrand</item>
        <item>the-scryers</item>
        <item>nathrezim</item>
        <item>burning-blade</item>
        <item>terenas</item>
        <item>thunderhorn</item>
        <item>suramar</item>
        <item>shadow-council</item>
        <item>emerald-dream</item>
        <item>azshara</item>
        <item>ravencrest</item>
        <item>draka</item>
        <item>akama</item>
        <item>kul-tiras</item>
        <item>rexxar</item>
        <item>arathor</item>
        <item>muradin</item>
        <item>haomarush</item>
        <item>thrall</item>
        <item>dentarg</item>
        <item>black-dragonflight</item>
        <item>demon-soul</item>
        <item>aerie-peak</item>
        <item>undermine</item>
        <item>korialstrasz</item>
        <item>anubarak</item>
        <item>misha</item>
        <item>bladefist</item>
        <item>rivendare</item>
        <item>hydraxis</item>
        <item>shandris</item>
        <item>farstriders</item>
        <item>wyrmrest-accord</item>
        <item>auchindoun</item>
        <item>coilfang</item>
        <item>the-underbog</item>
        <item>terokkar</item>
        <item>caelestrasz</item>
        <item>amanthul</item>
        <item>gundrak</item>
        <item>duskwood</item>
        <item>turalyon</item>
        <item>azralon</item>
        <item>malygos</item>
        <item>khazgoroth</item>
        <item>queldorei</item>
        <item>drakkari</item>
        <item>eredar</item>
        <item>gorefiend</item>
        <item>thunderlord</item>
        <item>dunemaul</item>
        <item>stonemaul</item>
        <item>darkspear</item>
        <item>spirestone</item>
        <item>smolderthorn</item>
        <item>runetotem</item>
        <item>skywall</item>
        <item>kalecgos</item>
        <item>ursin</item>
        <item>maelstrom</item>
        <item>twisting-nether</item>
        <item>balnazzar</item>
        <item>malfurion</item>
        <item>drakthul</item>
        <item>mugthol</item>
        <item>khaz-modan</item>
        <item>trollbane</item>
        <item>madoran</item>
        <item>zuluhed</item>
        <item>ysera</item>
        <item>uldaman</item>
        <item>alterac-mountains</item>
        <item>shuhalo</item>
        <item>ravenholdt</item>
        <item>nesingwary</item>
        <item>area-52</item>
        <item>frostmourne</item>
        <item>saurfang</item>
        <item>silvermoon</item>
        <item>echo-isles</item>
        <item>senjin</item>
        <item>cenarion-circle</item>
        <item>llane</item>
        <item>laughing-skull</item>
        <item>burning-legion</item>
        <item>stormscale</item>
        <item>boulderfist</item>
        <item>uldum</item>
        <item>eldrethalas</item>
        <item>firetree</item>
        <item>gurubashi</item>
        <item>detheroc</item>
        <item>dark-iron</item>
        <item>staghelm</item>
        <item>kaelthas</item>
        <item>lightninghoof</item>
        <item>kirin-tor</item>
        <item>garithos</item>
        <item>anetheron</item>
        <item>gnomeregan</item>
        <item>jaedenar</item>
        <item>blackwing-lair</item>
        <item>darrowmere</item>
        <item>blackwater-raiders</item>
        <item>sisters-of-elune</item>
        <item>draktharon</item>
        <item>antonidas</item>
        <item>cairne</item>
        <item>azuremyst</item>
        <item>quelthalas</item>
        <item>exodar</item>
        <item>blades-edge</item>
        <item>velen</item>
        <item>dawnbringer</item>
        <item>goldrinn</item>
        <item>tol-barad</item>
        <item>gallywix</item>
        <item>barthilas</item>
        <item>shadowmoon</item>
        <item>frostmane</item>
        <item>chogall</item>
        <item>alexstrasza</item>
        <item>aegwynn</item>
        <item>malorne</item>
        <item>hakkar</item>
        <item>veknilash</item>
        <item>andorhal</item>
        <item>executus</item>
        <item>the-venture-co</item>
        <item>tanaris</item>
        <item>maiev</item>
        <item>nazgrel</item>
        <item>garrosh</item>
        <item>galakrond</item>
        <item>grizzly-hills</item>
        <item>dreadmaul</item>
        <item>scarlet-crusade</item>
        <item>bloodhoof</item>
        <item>dathremar</item>
        <item>proudmoore</item>
        <item>cenarius</item>
        <item>kilrogg</item>
        <item>nerzhul</item>
        <item>uther</item>
        <item>deathwing</item>
        <item>kiljaeden</item>
        <item>blackhand</item>
        <item>durotan</item>
        <item>bleeding-hollow</item>
        <item>warsong</item>
        <item>mannoroth</item>
        <item>skullcrusher</item>
        <item>azgalor</item>
        <item>dethecus</item>
        <item>gorgonnash</item>
        <item>sargeras</item>
        <item>lightnings-blade</item>
        <item>azjolnerub</item>
        <item>chromaggus</item>
        <item>winterhoof</item>
        <item>windrunner</item>
        <item>argent-dawn</item>
        <item>magtheridon</item>
        <item>bronzebeard</item>
        <item>the-forgotten-coast</item>
        <item>scilla</item>
        <item>dalvengyr</item>
        <item>moknathal</item>
        <item>lethon</item>
    </string-array>
    <string name="token_current">Текущая цена: %s</string>
    <string name="token_max">Max: %s</string>
    <string name="token_min">Min: %s</string>
    <string name="token_start">Оповестить, если цена..</string>
    <string name="token_change">Изменения: %s</string>
    <string name="token_rbtn_low">..меньше:</string>
    <string name="token_rbtn_high">..больше:</string>
    <string name="menu_home">Home</string>
    <string name="filter_header_item_level_start">1</string>
    <string name="filter_header_item_level_end">∞</string>
    <string name="filter_header_item_level_text_view">Диапазон уровней:</string>
    <string name="filter_header_item_price_text_view">Диапазон цен:</string>
    <string name="filter_header_item_price_start">1</string>
    <string name="filter_header_item_price_end">∞</string>
    <string name="filter_header_order_by">Сортировать по:</string>
</resources>