<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group
            android:id="@+id/nav_group_auctions"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_auctions"
                android:icon="@drawable/auction_house_24px"
                android:title="@string/menu_auc"/>
            <item
                android:id="@+id/nav_auctions_tracing"
                android:icon="@drawable/tracked_lots_24px"
                android:title="@string/menu_auc_tracking"/>
            <item
                android:id="@+id/nav_auctions_best"
                android:icon="@drawable/best_deals_24px"
                android:title="@string/menu_auc_best"/>
        </group>
        <group
        android:id="@+id/nav_group_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wowtoken"
            android:icon="@drawable/wowtoken_24px"
            android:title="@string/menu_wowtoken"/>
        <item
            android:id="@+id/nav_talents"
            android:icon="@drawable/talents_grid_24px"
            android:title="@string/menu_talant_calc"/>
        <item
            android:id="@+id/nav_talents_builds"
            android:icon="@drawable/talents_builds_24px"
            android:title="@string/menu_top_bilds"/>
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/characters_24px"
            android:title="@string/menu_character_profiles"/>
        </group>
        <group
        android:id="@+id/nav_group_exit_and_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24px"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings_20px"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_to_app_24px"
            android:title="@string/menu_exit"/>
        </group>
</menu>