<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:id="@+id/drawer_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--Изменеи порядок строк и стобцов, а также span-->
    <TextView
        android:visibility="gone"
        android:id="@+id/menu_deals"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_auc_best"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/menu_lots"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="1"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_auc_tracking"/>


    <TextView
        android:id="@+id/menu_auc"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="3"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_auc"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/menu_builds"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_top_bilds"/>

    <TextView
        android:id="@+id/menu_calc"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="3"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_talant_calc"/>

    <TextView
        android:visibility="gone"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="3"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_character_profiles"/>
    <TextView
        android:id="@+id/menu_wowtoken"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_wowtoken"/>
    <TextView
        android:id="@+id/menu_setting"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_settings"/>
    <TextView
        android:id="@+id/menu_exit"
        android:height="0dp"
        android:width="0dp"
        android:gravity="center"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/menu_element_margin"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/menu_exit"/>

</GridLayout>