<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/token_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Toolbar">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/token_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token_max" />
        <TextView
            android:id="@+id/token_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token_current" />

        <TextView
            android:id="@+id/token_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token_min" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/token_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token_change" />
            <ImageSwitcher
                android:id="@+id/token_image_switcher"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </ImageSwitcher>
        </LinearLayout>
        <CheckBox
            android:id="@+id/token_start"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token_start"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/token_rbtn_low"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token_rbtn_low"/>
            <RadioButton
                android:id="@+id/token_rbtn_high"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token_rbtn_high"/>
        </RadioGroup>

        <EditText
            android:id="@+id/token_et_target_price"
            android:textAlignment="center"
            android:textSize="14sp"
            android:width="70dp"
            android:inputType="number"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--Тестовый блок-->
        <!--<EditText-->
            <!--android:visibility="invisible"-->
            <!--android:id="@+id/test_coef_et"-->
            <!--android:text="125"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<Button-->
            <!--android:id="@+id/test_btn"-->
            <!--android:text="set new token"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<Button-->
            <!--android:id="@+id/test_btn2"-->
            <!--android:text="presente.init"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--Конец-->


    </LinearLayout>

</RelativeLayout>