<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/filter_header_item_level_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filter_header_item_price_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/filter_header_item_level_text_view"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="viewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/filter_header_item_level_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/filter_header_item_level_text_view"
        app:layout_constraintStart_toEndOf="@id/filter_header_item_level_text_view"
        app:layout_constraintEnd_toStartOf="@id/filter_header_item_level_end"
        android:textAlignment="center"
        android:hint="@string/filter_header_item_level_start"
        android:textSize="14sp"
        android:width="70dp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/filter_header_item_level_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/filter_header_item_level_text_view"
        app:layout_constraintStart_toEndOf="@id/filter_header_item_level_start"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:hint="@string/filter_header_item_level_end"
        android:textSize="14sp"
        android:width="70dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/filter_header_item_price_text_view"
        app:layout_constraintTop_toBottomOf="@id/filter_header_item_level_text_view"
        app:layout_constraintStart_toStartOf="@id/filter_header_item_level_text_view"
        app:layout_constraintBottom_toBottomOf="@id/filter_header_order_by_text_view"
        android:text="@string/filter_header_item_price_text_view"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="viewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/filter_header_item_price_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/filter_header_item_price_text_view"
        app:layout_constraintStart_toStartOf="@id/filter_header_item_level_start"
        app:layout_constraintEnd_toEndOf="@id/filter_header_item_level_start"
        android:textAlignment="center"
        android:hint="@string/filter_header_item_price_start"
        android:textSize="14sp"
        android:width="70dp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/filter_header_item_price_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/filter_header_item_price_start"
        app:layout_constraintStart_toEndOf="@id/filter_header_item_price_start"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:hint="@string/filter_header_item_price_end"
        android:textSize="14sp"
        android:width="70dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/filter_header_order_by_text_view"
        app:layout_constraintTop_toBottomOf="@id/filter_header_item_price_text_view"
        app:layout_constraintStart_toStartOf="@id/filter_header_item_level_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/filter_header_order_by"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="viewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/filter_header_order_by_spinner"
        app:layout_constraintBaseline_toBaselineOf="@id/filter_header_order_by_text_view"
        app:layout_constraintStart_toStartOf="@id/filter_header_item_price_start"
        app:layout_constraintEnd_toEndOf="@id/filter_header_item_level_end"
        android:layout_marginBottom="40dp"
        android:layout_centerInParent ="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/filter_header_order_by_spinner">
    </Spinner>
</android.support.constraint.ConstraintLayout>