<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Toolbar">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/setting_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/setting_spin_server"
            android:layout_marginBottom="40dp"
            android:layout_centerInParent ="true"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:entries="@array/slugs_eu">
        </Spinner>
        <TextView
            android:text="@string/setting_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/setting_spin_region"
            android:layout_marginBottom="40dp"
            android:layout_centerInParent ="true"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:entries="@array/regions"/>
        <TextView
            android:text="@string/setting_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/setting_spin_lang"
            android:layout_centerInParent ="true"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:entries="@array/langs">
        </Spinner>
    </LinearLayout>
</RelativeLayout>